--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h3 id ="Scope" style="color: rgb(0, 34, 128)">1.2 Scope</h3>
     <pr>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae mauris consequat, ullamcorper neque sed, ultricies eros. Maecenas rutrum leo a dolor efficitur, ac scelerisque justo molestie. Nulla in varius sapien. Nam vitae tellus id neque blandit ullamcorper ac ut est. Vivamus sed ultrices risus. Mauris tincidunt urna vitae imperdiet dictum. Pellentesque venenatis convallis quam, et tincidunt purus fermentum nec. Nullam tempus mauris nunc, id cursus elit varius ac. Quisque eget ex nec est viverra auctor a nec sapien. Sed tempor velit nec lectus scelerisque convallis. Donec mauris ipsum, bibendum sed lobortis in, pulvinar a massa. Sed scelerisque pretium elit sit amet vestibulum.</pr>
     <br>
-    <img src="image\Daylight_Detector_JE1_BE1.webp" alt="" height = "50%" width = "50%">
+    <img src="C:\VisualStudioCode\image\Daylight_Detector_JE1_BE1.webp" alt="" height = "50%" width = "50%">
     <br>
     <br>
     <h2>2.0 Second Chapter</h2>
